[gd_scene load_steps=13 format=3 uid="uid://b47vu2y258g5v"]

[ext_resource type="Script" uid="uid://bhb47oq4pvkq8" path="res://Game/model/player_state/player_state.gd" id="1_f77f7"]
[ext_resource type="Script" uid="uid://4wh2gi5ydyre" path="res://Game/model/player_state/item_property.gd" id="2_f77f7"]
[ext_resource type="Script" uid="uid://clga8v64ljqmd" path="res://Game/model/player_state/item_model.gd" id="2_wyreu"]
[ext_resource type="Script" uid="uid://bh2vsaywv750x" path="res://Game/model/player_state/ore_model.gd" id="4_kvvmd"]
[ext_resource type="Script" uid="uid://dpx2k8by1fc0s" path="res://Game/model/player_state/building_model.gd" id="5_dg143"]
[ext_resource type="Script" uid="uid://b1jsyuqgvgctx" path="res://Game/model/player_state/building_ecs.gd" id="6_njjyn"]
[ext_resource type="Script" uid="uid://qxnxug305fjm" path="res://Game/data/building_systems/storage_system.gd" id="7_3nm42"]
[ext_resource type="Script" uid="uid://tsmfm5fs6yn1" path="res://Game/model/player_state/new_component_manager.gd" id="7_ut4we"]
[ext_resource type="Script" uid="uid://chjqf2hbd3gmx" path="res://Game/data/building_systems/energy_system.gd" id="8_ut4we"]
[ext_resource type="Script" uid="uid://bbsghvtoin0bs" path="res://Game/data/building_systems/miner_system.gd" id="9_3k6uv"]
[ext_resource type="Script" uid="uid://6r5nbp5cnpms" path="res://Game/data/building_systems/heat_system/heat_system.gd" id="10_qqbho"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_iq7yb"]
properties/0/path = NodePath("ItemModel/ItemCounts:value_dict")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("ItemModel/ItemProduction:value_dict")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("ItemModel/ItemConsumption:value_dict")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("ItemModel/StorageCaps:value_dict")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath("OreModel:ores")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("BuildingModel:buildings_serialized")
properties/5/spawn = true
properties/5/replication_mode = 2

[node name="PlayerState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f77f7")

[node name="ItemModel" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_wyreu")
metadata/_custom_type_script = "uid://clga8v64ljqmd"

[node name="ItemCounts" type="Node" parent="ItemModel"]
unique_name_in_owner = true
script = ExtResource("2_f77f7")

[node name="ItemProduction" type="Node" parent="ItemModel"]
unique_name_in_owner = true
script = ExtResource("2_f77f7")

[node name="ItemConsumption" type="Node" parent="ItemModel"]
unique_name_in_owner = true
script = ExtResource("2_f77f7")

[node name="StorageCaps" type="Node" parent="ItemModel"]
unique_name_in_owner = true
script = ExtResource("2_f77f7")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_iq7yb")

[node name="OreModel" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_kvvmd")

[node name="BuildingModel" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_dg143")
metadata/_custom_type_script = "uid://dpx2k8by1fc0s"

[node name="BuildingEcs" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_njjyn")

[node name="ComponentManager" type="Node" parent="BuildingEcs"]
unique_name_in_owner = true
script = ExtResource("7_ut4we")
metadata/_custom_type_script = "uid://tsmfm5fs6yn1"

[node name="Systems" type="Node" parent="BuildingEcs"]
unique_name_in_owner = true

[node name="OreStorageSystem" type="Node" parent="BuildingEcs/Systems"]
script = ExtResource("7_3nm42")
metadata/_custom_type_script = "uid://qxnxug305fjm"

[node name="EnergySystem" type="Node" parent="BuildingEcs/Systems"]
script = ExtResource("8_ut4we")
metadata/_custom_type_script = "uid://chjqf2hbd3gmx"

[node name="MinerSystem" type="Node" parent="BuildingEcs/Systems"]
script = ExtResource("9_3k6uv")
metadata/_custom_type_script = "uid://bbsghvtoin0bs"

[node name="HeatSystem" type="Node" parent="BuildingEcs/Systems"]
script = ExtResource("10_qqbho")
metadata/_custom_type_script = "uid://6r5nbp5cnpms"

[connection signal="delta_synchronized" from="MultiplayerSynchronizer" to="." method="_on_multiplayer_synchronizer_synchronized"]
